# Tuffous

./: .gitignore  Cargo.toml  readme.md
src/: base.rs  cli.rs  gui.rs  main.rs  util.rs
src/gui/: app.rs  appearance.rs  config.rs  gui.rs  icons.rs  main.rs  mod.rs
tuffous-cli/: Cargo.toml
tuffous-cli/src/: main.rs
tuffous-core/: Cargo.toml
tuffous-core/src/: lib.rs  util.rs
tuffous-gui/: Cargo.toml
tuffous-gui/src/: appearance.rs  config.rs  main.rs
