[package]
name = "tuffous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# array-concat = "0.5.2"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
iced = "0.8.0"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.93"
