[package]
name = "tuffous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# array-concat = "0.5.2"
chrono = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
iced = {version = "*", features=["image"]}
lazy_static = "*"
serde = { version = "*", features = ["serde_derive", "derive"] }
serde_json = "*"
