[package]
name = "tuffous-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["serde_derive", "derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive"] }
tuffous-core = { version = "*", path = "../tuffous-core" }
